src/content/styles/modules/_shell.scss
@mixin shell {
    rv-shell {
        overflow: hidden;
        left: 0;
        right: 0;
        bottom: 0;
        top: 0;
        position: absolute;
        z-index: -1;

        &:after {
            content: "";
            position: absolute;
            top: 0;
            bottom: 0;
            right: 0;
            left: 0;
            background-color: #FFFFFF;
            z-index: -2;
        }

        .rv-focus-dialog-content {
            display: none;
        }

        .rv-north-arrow {
            position: absolute;
            top: rem(0.2);
            z-index: 10;
            border-radius: rem(2);
            background-color: rgba(white, 0.82);
            padding: rem(0.5);
        }

        @include include-size(rv-sm) {
            .rv-north-arrow {
                top: $toolbar-height;
                z-index: 0;
            }
        }
    }
}

